objects/Account_Scheduled_Task__c/Account_Scheduled_Task__c.object-meta.xml
<CustomObject>
    <label>Account Scheduled Task</label>
    <nameField>
        <displayFormat>Scheduled Task-{000000}</displayFormat>
        <label>Account Scheduled Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Scheduled Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>