objects/Account_Scheduled_Task__c/fields/Current_Activity_Required__c.field-meta.xml
<CustomField>
    <fullName>Current_Activity_Required__c</fullName>
    <description>Next Activity Required = (if previous Proactive Type &amp; Case Origin = Account Review Visit or Account Review Virtual the next Activity to display needs to = Contact. If previous Proactive Type &amp; Case Origin = Call In, Call Out or Email the next Activity to display needs to = Account Review).</description>
    <inlineHelpText>Next Activity Required = (if previous Proactive Type &amp; Case Origin = Account Review Visit or Account Review Virtual the next Activity to display needs to = Contact. If previous Proactive Type &amp; Case Origin = Call In, Call Out or Email the next Activity</inlineHelpText>
    <label>Next Activity Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>