objects/Account_Scheduled_Task__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description>Previous Activity Run Date - Last date this activity was completed.</description>
    <label>Previous Activity Run Date</label>
    <type>Date</type>
</CustomField>