objects/Account_Scheduled_Task__c/fields/Occurrence_Category__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Category__c</fullName>
    <label>Occurrence Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>