objects/Account_Scheduled_Task__c/fields/Occurrence_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Day_of_the_Week__c</fullName>
    <label>Occurrence Day of the Week</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occurrence_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>