objects/Account_Scheduled_Task__c/fields/Occurrence_SDotM__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_SDotM__c</fullName>
    <label>Occurrence Specific Day of the Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>