objects/Account_Scheduled_Task__c/fields/Previous_Proactive_Activity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Proactive_Activity__c</fullName>
    <description>Account Review Visit or Account Review Virtual the next Activity to display needs to = Contact. If previous Proactive Type &amp; Case Origin = Call In, Call Out or Email the next Activity to display needs to = Account Review).</description>
    <inlineHelpText>Account Review Visit or Account Review Virtual the next Activity to display needs to = Contact. If previous Proactive Type &amp; Case Origin = Call In, Call Out or Email the next Activity to display needs to = Account Review).</inlineHelpText>
    <label>Previous Proactive Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Review</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>