objects/Account_Scheduled_Task__c/fields/Starting_On__c.field-meta.xml
<CustomField>
    <fullName>Starting_On__c</fullName>
    <description>The start date for the activity.  Activity start date and fields from set for occurrence will set the next run date calculations.</description>
    <label>Activity Starting On Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>