objects/Account_Scheduled_Task__c/validationRules/Cannot_Clear_Next_or_Last_Run.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Clear_Next_or_Last_Run</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Next_Run__c) &amp;&amp; ISNULL(Next_Run__c)) || (ISCHANGED(Last_Run__c) &amp;&amp; ISNULL(Last_Run__c))</errorConditionFormula>
    <errorMessage>The Next Run and Last Run dates cannot be cleared</errorMessage>
</ValidationRule>